--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.18",
     "antd": "^4.17.4",
+    "antd-img-crop": "^4.1.0",
     "axios": "^0.24.0",
     "date-fns-tz": "^1.2.2",
     "framer-motion": "^5",
