--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "jest": "^27.4.5",
-    "ts-jest": "^27.1.2"
+    "ts-jest": "^27.1.2",
+    "typescript": "^4.5.5"
   }
 }
