--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,13 +25,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-highlight-words": "^0.17.0",
+    "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-spring": "^9.3.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
-    "uuidv4": "^6.2.12",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
